--- a/demo/modulation/envelope-playground.html
+++ b/demo/modulation/envelope-playground.html
@@ -61,6 +61,13 @@
   </div>
 
   <div id="sliders">
+    <div id="delaySliders">
+      Delay
+      <label>
+        Length
+        <input id="delayPeriod" type="range" min="0" max="5000" />
+      </label>
+    </div>
     <div id="attackSliders">
       Attack
       <label>
