--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>lines demo</title>
+  <title>ix library</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <style>
-    #lines {
-      border: 1px solid black;
-    }
-  </style>
-  <canvas id="lines" width=800></canvas>
 
-  <script type="module" src="lines.js"></script>
+  <h1>ix library</h1>
+  <a href="playgrounds/">Playgrounds</a>
+  <a href="demos/">Demos and starters</a>
 
 </body>
 
