--- a/public/playgrounds/modulation/easing.html
+++ b/public/playgrounds/modulation/easing.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>easing playgound</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 </head>
 
 <body>
@@ -59,7 +59,7 @@
     }
   </style>
 
-  <h1>Easings</h1>
+  <h1>Easing Playground</h1>
   <div>
     <p>Easing functions by <a href="https://easings.net/">Andrey Sitnik & Ivan Solovev</a>.</p>
     <label for="timeInput">Duration</label><input type="number" id="timeInput" value=1000>
@@ -83,7 +83,7 @@
       <div id="thing"></div>
     </div>
   </div>
-  <script type="module" src="easing-playground.js"></script>
+  <script type="module" src="easing.js"></script>
 
 </body>
 
