--- a/public/tests/collections/lists.html
+++ b/public/tests/collections/lists.html
@@ -146,6 +146,7 @@
     perfLifo();
 
   </script>
+  <p>This doesn't show anything - see the console for output, and the .html file for the source</p>
 </body>
 
 </html>
