--- a/tests/index.html
+++ b/tests/index.html
@@ -15,14 +15,9 @@
     <p>
       These are informal tests for internal use.
     </p>
-    <a href="geometry/">Geometry</a>
+    Geometry
     <ul>
       <li> <a href="./geometry/grid.html">Grid</a></li>
-    </ul>
-
-    Collections
-    <ul>
-      <li> <a href="./collections/list.html">List</a></li>
     </ul>
   </main>
 </body>
