--- a/public/demo/geometry/lines.html
+++ b/public/demo/geometry/lines.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>lines playground</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../base.css">
+  <link rel="stylesheet" href="../demos.css">
+
 </head>
 
 <body>
@@ -14,8 +16,19 @@
       border: 1px solid black;
     }
   </style>
-  <h1>Line</h1>
-  <canvas id="lineCanvas" width=380 height=150></canvas>
+
+  <article>
+    <h1>Line</h1>
+    <div>
+      <h2>Canvas</h2>
+      <canvas id="lineCanvas" width=380 height=150></canvas>
+    </div>
+    <h2>SVG</h2>
+    <div>
+
+    </div>
+
+  </article>
 
   <h1>Bezier</h1>
   <canvas id="bezierCanvas" width=380 height=150></canvas>
