--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -5,18 +5,40 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>demos</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../css/base.css">
+  <link rel="stylesheet" href="demos.css">
+
 </head>
 
 <body>
+  <header>
+    <nav><a href="../">ixfx</a></nav>
+  </header>
+  <main>
+    <h1>demos</h1>
+    <div class="cards">
+      <article>
+        <header>Collections</header>
+        <div>
+          <a href="collections/">Collections</a>
 
-  <h1>ix demos</h1>
+        </div>
+      </article>
+      <article>
+        <header>Geometry</header>
+        <a href="geometry/">Geometry</a>
 
-  <a href="collections/">Collections</a>
+      </article>
+      <article>
+        <header>Modulation</header>
+        <div>
+          <a href="modulation/envelope.html">Envelope</a>
+        </div>
 
-  <a href="geometry/">Geometry</a>
+      </article>
+    </div>
 
-  <a href="modulation/">Modulation</a>
+  </main>
 
 </body>
 
