--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,23 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ix library</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="base.css">
 </head>
 
 <body>
+  <main>
+    <h1>ixfx</h1>
+    <ul>
+      <li>
+        <a href="playgrounds/">Playgrounds</a>
+      </li>
+      <li>
+        <a href="demo/">Demos and starters</a>
+      </li>
+    </ul>
 
-  <h1>ix library</h1>
-  <a href="playgrounds/">Playgrounds</a>
-  <a href="demos/">Demos and starters</a>
 
+  </main>
 </body>
 
 </html>
