--- a/public/playgrounds/index.html
+++ b/public/playgrounds/index.html
@@ -4,14 +4,26 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ix playgrounds</title>
-  <link rel="stylesheet" href="../style.css">
+  <title>ixfx playgrounds</title>
+  <link rel="stylesheet" href="../base.css">
 </head>
 
 <body>
+  <header>
+    <a href="../">ixfx</a>
+  </header>
+  <main>
+    <h1>playgrounds</h1>
+    <div class="cards">
+      <article>
+        <header>modulation</header>
+        <a href="modulation/easing.html">easing</a>
+        <a href="modulation/envelope.html">envelope</a>
 
-  <h1><a href="../">ix</a> \ playgrounds</h1>
-  <a href="modulation/">modulation</a>
+      </article>
+    </div>
+
+  </main>
 
 </body>
 
