--- a/public/playgrounds/modulation/envelope.html
+++ b/public/playgrounds/modulation/envelope.html
@@ -150,9 +150,8 @@
     <div id="envValueVis"></div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.1.1/svg.min.js"
-    integrity="sha512-Aj0P6wguH3GVlCfbvTyMM90Zq886ePyMEYlZooRfx+3wcSYyUa6Uv4iAjoJ7yiWdKamqQzKp7yr/TkMQ8EEWbQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- <script src="../../lib/svg.js.3.1.1.min.js"></script>
+   -->
 
   <script type="module" src="envelope.js"></script>
 </body>
