--- a/tests/geometry/index.html
+++ b/tests/geometry/index.html
@@ -15,6 +15,8 @@
   <main>
     <h1>Geometry</h1>
     <ul>
+      <li><a href="./lines.html">Lines</a></li>
+
       <li><a href="./grid.html">Grid</a></li>
     </ul>
   </main>
