--- a/tests/index.html
+++ b/tests/index.html
@@ -18,6 +18,8 @@
     Geometry
     <ul>
       <li> <a href="./geometry/grid.html">Grid</a></li>
+      <li> <a href="./geometry/lines.html">Lines</a></li>
+
     </ul>
   </main>
 </body>
