--- a/tests/index.html
+++ b/tests/index.html
@@ -19,6 +19,7 @@
     <ul>
       <li> <a href="./geometry/grid.html">Grid</a></li>
       <li> <a href="./geometry/lines.html">Lines</a></li>
+      <li> <a href="./geometry/arcs.html">Circles and Arcs</a></li>
 
     </ul>
   </main>
