--- a/tests/geometry/arcs.html
+++ b/tests/geometry/arcs.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>circles & arcs test</title>
+  <title>Circles & Arcs test</title>
   <link rel="stylesheet" href="../css/pico.fluid.classless.css">
 </head>
 <style>
@@ -39,8 +39,8 @@
     <a href="../">ixfx</a> \ <a href="./">geometry</a>
   </header>
   <main>
-    <h1>Lines</h1>
-    <h2>Line</h2>
+    <h1>Circles & Arcs</h1>
+    <h2>Circle</h2>
     <section>
       <div>
         <h2>Canvas</h2>
@@ -51,6 +51,53 @@
         <div class="svg" id="lineSvg"></div>
       </div>
     </section>
+
+    <h2>Circle Intersection</h2>
+
+    <label>
+      <input type="checkbox" id="bboxIntersection">
+      Bounding box
+    </label>
+    <section>
+      <div>
+        <h2>Canvas</h2>
+        <canvas id="intersectionCanvas" width=210 height=110></canvas>
+      </div>
+      <div>
+        <h2>SVG</h2>
+        <div class="svg" id="intersectionSvg"></div>
+      </div>
+    </section>
+
+    <h2>Circle contained</h2>
+    <section>
+      <div>
+        <h2>Canvas</h2>
+        <canvas id="containedCanvas" width=210 height=110></canvas>
+      </div>
+      <div>
+        <h2>SVG</h2>
+        <div class="svg" id="containedSvg"></div>
+      </div>
+    </section>
+
+
+    <h2>Arc</h2>
+    <label>
+      <input type="checkbox" id="bboxArcs">
+      Bounding boxes
+    </label>
+    <section>
+      <div>
+        <h2>Canvas</h2>
+        <canvas id="arcCanvas" width=210 height=110></canvas>
+      </div>
+      <div>
+        <h2>SVG</h2>
+        <div class="svg" id="arcSvg"></div>
+      </div>
+    </section>
+
 
     <!-- <h2>Bezier</h2>
     <section>
