--- a/tests/geometry/lines.html
+++ b/tests/geometry/lines.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>lines test</title>
+  <title>Lines test</title>
   <link rel="stylesheet" href="../css/pico.fluid.classless.css">
 </head>
 <style>
