--- a/tests/geometry/arcs.html
+++ b/tests/geometry/arcs.html
@@ -8,25 +8,20 @@
   <link rel="stylesheet" href="../css/pico.fluid.classless.css">
 </head>
 <style>
-  #lines {
-    border: 1px solid black;
-  }
-
   section {
     display: flex;
   }
 
   section>div {
     margin: 0.3em;
-    background-color: #edf0f3;
     padding: 0.3em;
   }
 
   section h2 {
-    color: black;
     font-size: 80%;
     text-transform: uppercase;
     margin-bottom: 0;
+    color: var(--muted-color);
   }
 
   .svg {
@@ -84,7 +79,7 @@
 
     <h2>Arc</h2>
     <label>
-      <input type="checkbox" id="bboxArcs">
+      <input type="checkbox" checked id="bboxArcs">
       Bounding boxes
     </label>
     <section>
