--- a/tests/geometry/index.html
+++ b/tests/geometry/index.html
@@ -15,9 +15,10 @@
   <main>
     <h1>Geometry</h1>
     <ul>
-      <li><a href="./lines.html">Lines</a></li>
-
       <li><a href="./grid.html">Grid</a></li>
+      <li><a href="./lines.html">Lines</a></li>
+      <li><a href="./arcs.html">Circles & Arcs</a></li>
+
     </ul>
   </main>
 </body>
