--- a/tests/index.html
+++ b/tests/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ixfx informal tests</title>
+  <title>ixfx Visual tests</title>
   <link rel="stylesheet" href="css/pico.fluid.classless.css">
 </head>
 
 <body>
   <header>ixfx</header>
   <main>
-    <h1>tests</h1>
+    <h1>Visual Tests</h1>
     <p>
       These are informal tests for internal use.
     </p>
