--- a/tests/geometry/arcs.html
+++ b/tests/geometry/arcs.html
@@ -6,28 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Circles & Arcs test</title>
   <link rel="stylesheet" href="../css/pico.fluid.classless.css">
+  <link rel="stylesheet" href="./geometry.css">
 </head>
-<style>
-  section {
-    display: flex;
-  }
-
-  section>div {
-    margin: 0.3em;
-    padding: 0.3em;
-  }
-
-  section h2 {
-    font-size: 80%;
-    text-transform: uppercase;
-    margin-bottom: 0;
-    color: var(--muted-color);
-  }
-
-  .svg {
-    padding: 5px;
-  }
-</style>
 
 <body>
   <header>
