--- a/tests/geometry/index.html
+++ b/tests/geometry/index.html
@@ -18,6 +18,8 @@
       <li><a href="./grid.html">Grid</a></li>
       <li><a href="./lines.html">Lines</a></li>
       <li><a href="./arcs.html">Circles & Arcs</a></li>
+      <li><a href="./curves.html">Curves</a></li>
+      <li><a href="./compound.html">Compound</a></li>
 
     </ul>
   </main>
