--- a/tests/index.html
+++ b/tests/index.html
@@ -15,11 +15,8 @@
     <p>
       These are informal tests for internal use.
     </p>
-    Geometry
     <ul>
-      <li> <a href="./geometry/grid.html">Grid</a></li>
-      <li> <a href="./geometry/lines.html">Lines</a></li>
-      <li> <a href="./geometry/arcs.html">Circles and Arcs</a></li>
+      <li> <a href="./geometry/">Geometry</a></li>
 
     </ul>
   </main>
