--- a/tests/geometry/lines.html
+++ b/tests/geometry/lines.html
@@ -43,14 +43,18 @@
 
     <h2>Compound path</h2>
     <p>Path made up of several lines</p>
+    <label>
+      <input type="checkbox" id="bboxCompound">
+      Bounding boxes
+    </label>
     <section>
       <div>
         <h2>Canvas</h2>
-        <canvas id="multiPathCanvas" width=410 height=120></canvas>
+        <canvas id="compoundCanvas" width=410 height=120></canvas>
       </div>
       <div>
         <h2>SVG</h2>
-        <div class="svg" id="multiPathSvg"></div>
+        <div class="svg" id="compoundSvg"></div>
       </div>
     </section>
 
