--- a/tests/index.html
+++ b/tests/index.html
@@ -11,10 +11,7 @@
 <body>
   <header>ixfx</header>
   <main>
-    <h1>Visual Tests</h1>
-    <p>
-      These are informal tests for internal use.
-    </p>
+    <h1>Tests and demos</h1>
     <ul>
       <li> <a href="./geometry/">Geometry</a></li>
 
