--- a/demos/geometry/curves.html
+++ b/demos/geometry/curves.html
@@ -21,11 +21,11 @@
     <section>
       <div>
         <h2>Canvas</h2>
-        <canvas id="lineCanvas"></canvas>
+        <canvas id="cubicCanvas"></canvas>
       </div>
       <div>
         <h2>SVG</h2>
-        <div class="svg" id="lineSvg"></div>
+        <div class="svg" id="cubicSvg"></div>
       </div>
     </section>
 
