--- a/demos/dom/lithtml.html
+++ b/demos/dom/lithtml.html
@@ -5,18 +5,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ixfx Visual tests</title>
-  <link rel="stylesheet" href="css/pico.fluid.classless.css">
+  <link rel="stylesheet" href="../css/pico.fluid.classless.css">
+  <script src="../../src/dom/SimpleGreeting.js" type="module"></script>
 </head>
 
 <body>
   <header>ixfx</header>
   <main>
-    <h1>Tests and demos</h1>
-    <ul>
-      <li> <a href="./geometry/">Geometry</a></li>
-      <li> <a href="./dom/">DOM</a></li>
-
-    </ul>
+    <p>Demo of importing a Lit-HTML component:</p>
+    <simple-greeting name="Markup" />
   </main>
 </body>
 
