--- a/demos/dom/index.html
+++ b/demos/dom/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ix library tests</title>
   <link rel="stylesheet" href="../css/pico.fluid.classless.css">
+  <link rel="stylesheet" href="../css/demos.css">
 </head>
 
 <body>
@@ -13,12 +14,10 @@
     <a href="../../">ixfx</a>
   </header>
   <main>
-    <h1>DOM</h1>
-    <ul>
-      <li><a href="lithtml.html">LitHtml</a></li>
-      <li><a href="freqHistogram.html">Frequency Histogram</a></li>
-
-    </ul>
+    <h1>dom</h1>
+    <ul class="nobullets">
+      <li><a href="histogramHtml.html">Histogram (via HTML)</a></li>
+      <li><a href="domLog.html">domLog</a></li </ul>
   </main>
 </body>
 
