--- a/demos/dom/lithtml.html
+++ b/demos/dom/lithtml.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ixfx Visual tests</title>
   <link rel="stylesheet" href="../css/pico.fluid.classless.css">
+  <link rel="stylesheet" href="../css/demos.css">
   <script src="../../src/dom/SimpleGreeting.js" type="module"></script>
 </head>
 
