--- a/demos/geometry/index.html
+++ b/demos/geometry/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ix library tests</title>
   <link rel="stylesheet" href="../css/pico.fluid.classless.css">
+  <link rel="stylesheet" href="../css/demos.css">
 </head>
 
 <body>
@@ -13,14 +14,13 @@
     <a href="../../">ixfx</a>
   </header>
   <main>
-    <h1>Geometry</h1>
-    <ul>
+    <h1>geometry</h1>
+    <ul class="nobullets">
       <li><a href="./grid.html">Grid</a></li>
       <li><a href="./lines.html">Lines</a></li>
       <li><a href="./arcs.html">Circles & Arcs</a></li>
       <li><a href="./curves.html">Curves</a></li>
       <li><a href="./compound.html">Compound</a></li>
-
     </ul>
   </main>
 </body>
