--- a/demos/index.html
+++ b/demos/index.html
@@ -4,18 +4,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ixfx Visual tests</title>
+  <title>ixfx</title>
   <link rel="stylesheet" href="css/pico.fluid.classless.css">
+  <link rel="stylesheet" href="css/demos.css">
 </head>
 
 <body>
   <header>ixfx</header>
   <main>
-    <h1>Tests and demos</h1>
-    <ul>
-      <li> <a href="./geometry/">Geometry</a></li>
-      <li> <a href="./dom/">DOM</a></li>
+    <h1>ixfx demos</h1>
+    <ul class="nobullets">
+      <li> \ <a href="./geometry/">Geometry</a></li>
+      <li> \ <a href="./dom/">DOM</a></li>
+    </ul>
 
+    <ul class="nobullets">
+      <li><a href="./freqHistogram.html">Frequency Histogram</a></li>
     </ul>
   </main>
 </body>
