--- a/demos/dom/index.html
+++ b/demos/dom/index.html
@@ -16,8 +16,9 @@
   <main>
     <h1>dom</h1>
     <ul class="nobullets">
-      <li><a href="histogramHtml.html">Histogram (via HTML)</a></li>
-      <li><a href="domLog.html">domLog</a></li </ul>
+      <li><a href="histogramHtml.html">Histogram chart component</a>: usage via HTML</li>
+      <li><a href="domLog.html">domLog</a>: use an HTML element to log data</li>
+    </ul>
   </main>
 </body>
 
