--- a/demos/freqHistogram.html
+++ b/demos/freqHistogram.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Frequency Histogram</title>
-  <link rel="stylesheet" href="../css/pico.fluid.classless.css">
-  <link rel="stylesheet" href="../demos.css">
+  <link rel="stylesheet" href="css/pico.fluid.classless.css">
+  <link rel="stylesheet" href="css/demos.css">
 
 </head>
 
@@ -26,7 +26,7 @@
     }
   </style>
   <header>
-    <a href="../">ixfx</a> \ <a href="./">dom</a>
+    <a href="../">ixfx</a>
   </header>
   <main>
     <section>
