--- a/demos/index.html
+++ b/demos/index.html
@@ -20,6 +20,8 @@
 
     <ul class="nobullets">
       <li><a href="./freqHistogram.html">Frequency Histogram</a></li>
+      <li><a href="./stateMachine.html">State Machine</a></li>
+
     </ul>
   </main>
 </body>
