--- a/demos/stateMachine.html
+++ b/demos/stateMachine.html
@@ -22,7 +22,7 @@
     }
 
     .sxs>section>section {
-      padding: 1rem;
+      padding: var(--padding2);
     }
 
     section.withDivider {
@@ -30,11 +30,18 @@
     }
 
     hr {
-      border-width: 0.2rem;
+      border-width: var(--padding1);
     }
 
     #jsonDescr {
-      padding: 1rem;
+      padding: var(--padding3);
+    }
+
+    h2 {
+      font-size: 90%;
+      margin: 0 0 var(--padding1) 0;
+      text-transform: uppercase;
+      color: var(--muted-color);
     }
   </style>
   <header>
