--- a/demos/geometry/grid.html
+++ b/demos/geometry/grid.html
@@ -32,9 +32,12 @@
     <h1>Grid test</h1>
     <div id="testContainer">
       <section>
+        <h2>Walk</h2>
+        <h3>By column</h3>
+        <canvas id="walkByCol" width=150 height=150></canvas>
+        <h3>By row</h3>
+        <canvas id="walkByRow" width=150 height=150></canvas>
 
-        <h2>Walk and coords</h2>
-        <canvas id="walkTestCanvas" width=150 height=150></canvas>
       </section>
 
       <section>
@@ -47,7 +50,13 @@
       </section>
       <section>
         <h2>Visitor</h2>
-        <canvas id="visitorTestCanvas" width=160 height=160></canvas>
+        <h3>Depth</h3>
+        <canvas id="visitorDepth" width=160 height=160></canvas>
+        <h3>Breadth</h3>
+        <canvas id="visitorBreadth" width=160 height=160></canvas>
+        <h3>Random</h3>
+        <canvas id="visitorRandom" width=160 height=160></canvas>
+
       </section>
     </div>
   </main>
