--- a/demos/index.html
+++ b/demos/index.html
@@ -14,8 +14,9 @@
   <main>
     <h1>ixfx demos</h1>
     <ul class="nobullets">
-      <li> \ <a href="./geometry/">Geometry</a></li>
       <li> \ <a href="./dom/">DOM</a></li>
+      <li> \ <a href="./geometry/">Geometry</a></li>
+      <li> \ <a href="./modulation/">Modulation</a></li>
     </ul>
 
     <ul class="nobullets">
