--- a/tests/visual/plot/index.html
+++ b/tests/visual/plot/index.html
@@ -27,7 +27,7 @@
     </div>
     </div>
   </section>
-  <script type="module" src="script2.js"></script>
+  <script type="module" src="script-stream.js"></script>
 </body>
 
 </html>
