--- a/tests/dom/pointerVis/index.html
+++ b/tests/dom/pointerVis/index.html
@@ -8,11 +8,23 @@
 </head>
 
 <body>
-  <!-- <h1>Blah</h1>
+  <style>
+    body {
+      background-color: coral;
+      height: 100vh;
+      width: 100vw;
+      touch-action: none;
+      overflow: hidden;
+      user-select: none;
+      overscroll-behavior: none;
+
+    }
+  </style>
+  <h1>Blah</h1>
   <p>Lorem ipsum</p>
   <p>Lorem ipsum</p>
   <p>Lorem ipsum</p>
-  <p>Lorem ipsum</p> -->
+  <p>Lorem ipsum</p>
 
   <script type="module" src="script.js"></script>
 </body>
