--- a/tests/modulation/forces/index.html
+++ b/tests/modulation/forces/index.html
@@ -26,6 +26,9 @@
   <h2>attraction/repulsion</h2>
   <canvas width="500" height="200" id="attractRepulse"></canvas>
 
+  <h2>pendulum & spring</h2>
+  <canvas width="500" height="200" id="pendulum"></canvas>
+
   <script type="module" src="script.js"></script>
 </body>
 
