--- a/tests/data/pipe/index.html
+++ b/tests/data/pipe/index.html
@@ -4,21 +4,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>rx</title>
+  <title>pipe</title>
 </head>
 <style>
   html,body {
-    height: 100%;
+    height:100%;
   }
   body {
+    height: 100%;
     background-color: silver;
   }
   </style>
 <body>
-  <h1>rx</h1>
-  <div>Clicks: <span id="lblClicks">?</span><button id="btnClick">Click</button></div>
-  <div>Pointer: <span id="lblXy">?,?</span></div>
-  <div id="lblObj">Obj</div>
+  <h1>pipe</h1>
+  Clicks <span id="lblClicks">?</span>
+  <button id="btnClick">Click</button>
+
+  <button id="btnEvent">Event</button>
+  <span id="lblXy">?,?</span>
   <script type="module" src="script.js"></script>
 </body>
 
