Rx & chain improvements

--- a/tests/data/chain-dom/index.html
+++ b/tests/data/chain-dom/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>chain</title>
+  <title>chain-dom</title>
 </head>
 
 <body>
-  <h1>chain</h1>
+  <h1>chain-dom</h1>
   <script type="module" src="script.js"></script>
 </body>
 
