--- a/tests/dom/rx/index.html
+++ b/tests/dom/rx/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>chain</title>
+  <title>dom-rx</title>
 </head>
 
 <body>
-  <h1>chain</h1>
+  <h1>dom-rx</h1>
+  <section id="container">
+  </section>
   <script type="module" src="script.js"></script>
 </body>
 
