--- a/tests/data/rx-to-gen/index.html
+++ b/tests/data/rx-to-gen/index.html
@@ -4,11 +4,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>chain</title>
+  <title>rx-to-gen</title>
 </head>
-
+<style>
+  html,body {
+    height: 100%;
+  }
+  body {
+    background-color: silver;
+  }
+  </style>
 <body>
-  <h1>chain</h1>
+  <h1>rx-to-gen</h1>
+ 
   <script type="module" src="script.js"></script>
 </body>
 
