--- a/tests/data/rx-dom/index.html
+++ b/tests/data/rx-dom/index.html
@@ -22,6 +22,22 @@
     border: 1px solid black;
     display: inline-block;
   }
+  #creation {
+    div {
+      border: 1px solid blue;
+    }
+    span {
+      border: 1px solid green;
+    }
+  }
+  #creation {
+    display: flex;
+  }
+
+  #creation>section {
+    border: 1px solid lightblue;
+    padding: 1em;
+  }
   </style>
 <body>
   <h1>rx-dom</h1>
