--- a/tests/visual/plot2/index.html
+++ b/tests/visual/plot2/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Plot3</title>
+  <title>Plot2</title>
 </head>
 
 <body>
@@ -14,17 +14,18 @@
     }
 
     #container {
-      height: 10em;
+      height: 200px;
+      width:90vw;
+      border:1px solid whitesmoke;
     }
   </style>
   <section>
-    <h1>plot3</h1>
+    <h1>plot2</h1>
     <button id="btnToggle">Auto data</button>
     <button id="btnToggleYAxis">Y Axis</button>
 
     <div id="container">
-      <canvas id="plot">
-    </div>
+      <canvas id="plot"></canvas>
     </div>
   </section>
   <script type="module" src="script-stream.js"></script>
