--- a/tests/geometry/curves/index.html
+++ b/tests/geometry/curves/index.html
@@ -54,7 +54,7 @@
       </div>
     </section>
 
-    <script type="module" src="curves.js"></script>
+    <script type="module" src="script.js"></script>
   </main>
 
 </body>
