--- a/tests/io/midi-fighter/index.html
+++ b/tests/io/midi-fighter/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>midi</title>
+    <title>midi fighter</title>
   </head>
   <body>
     <style>
@@ -12,7 +12,7 @@
     }
     </style>
     <section>
-      <h1>midi</h1>
+      <h1>midi fighter</h1>
       <button id="btnDump">Dump</button>
       <label>Bank
         <input type="number" min="1" max="4" value="1" id="selBank"></label>
